--- a/memeGenerator.css
+++ b/memeGenerator.css
@@ -4,39 +4,72 @@ body{
 }
 header{
     background-color: blue;
-    margin-top: -1.6em;
-    height: 7em;
+    margin-top: -1.65vw;
+    height: 19vh;
 }
 h1{
     text-align: center;
-    padding-top: 0.5em;
+    padding-top: 1vw;
 }
 .buttonContainer{
     background-color: tan;
-    height: 1.7em;
-    width: 20em;
-    margin-left: 29.3em;
+    height: 6vh;
+    width: 27%;
+    margin-left: 36.5vw;
     display: flex;
     justify-content: space-around;
 }
 .buttonContainer button{
-
+    background-color: darkcyan;
 }
 main{
     background-color: darkblue;
-    width: 37em;
     display: flex;
     justify-content: center;
-    margin-left: 20em;
-    height: 29.3em;
+    margin-left: 30vw;
+    width: 40%;
+    height: 70vh;   
 }
-main button{
-    background-color: red;
+.text{
+    background-color: seagreen;
+    width: 100%;
+    height: 10vh;
 }
-aside{
+main .top{
+    margin-top: -0.1%;
+}
+main .bottom{
+    margin-top: 60vh;
+}
+.memeContainer{
+    background-color: rgb(162, 201, 236);
+    height: 50vh;
+    width: 100%;
+    align-self: center;
+}
+.downloadPictureButton{
+    background-color: salmon;
+    margin-left: 46vw;
+    margin-top: 2vw;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* aside{
     background-color: saddlebrown;
     width: 17em;
     margin-left:60em;
     margin-top: -37.12em;
     height: 36em;
-}
+} */
